tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (3ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_14_1+0331-153d228 started with time: 0.00.
Simulation ended at time: 123.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.00s
 Real time factor: 41000
 UPS: 246000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg of 30):
 RouteLength: 300.00
 Speed: 12.34
 Duration: 24.60
 WaitingTime: 0.37
 TimeLoss: 2.62
 DepartDelay: 9.33

